<resources>
    <string name="app_name">"Course exercise "</string>
    <string name="air_conditioning">"空调"</string>
    <string name="refrigerator">"冰箱"</string>
    <string name="washer">"洗衣机"</string>
    <string name="small_appliances">"厨房小电器"</string>
    <string name="big_appliances">"厨房大电器"</string>
    <string name="life_appliances">"生活家电"</string>
    <string name="calorifier">"热水器"</string>
    <string name="tools">"周边配件"</string>
    <string name="home">"首页"</string>
    <string name="shopping_line">"购物车"</string>
    <string name="me">"我"</string>
    <string name="default_username">"广达商城"</string>
    <string name="orders">"全部订单"</string>
    <string name="details">"查看详情 >"</string>
    <string name="product_name">商品名称</string>
    <string name="product_description">"商品简介"</string>
    <string name="product_price">"商品价格"</string>
    <string name="user_too_long">您输入的用户名过长！</string>
    <string name="login_success">登陆成功</string>
    <string name="login_fail">登陆失败，请检查账号或者密码</string>
    <string name="user_name">用户名(随意)</string>
    <string name="user_pwd">密码(123)</string>
    <string name="btn_login">登陆</string>
    <string name="progressdialog_logging">正在登陆···</string>
    <string name="main_page_banner">广达商城</string>
</resources>
