<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ListImg"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/product_details" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:id="@+id/TvName"
                android:text="@string/product_name" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/TvNotice"
                android:textColor="@color/colorGery"
                android:textSize="10dp"
                android:text="@string/product_description" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/TvPrice"
                android:textColor="@color/colorPrice"
                android:text="@string/product_price" />
        </TableRow>
    </TableLayout>

</LinearLayout>