<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <RelativeLayout
                android:background="@drawable/table_frame_gray"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:src="@drawable/table_default_1"
                    android:id="@+id/TImage1"/>
                <TextView
                    android:id="@+id/TText1"
                    android:layout_marginTop="15dp"
                    android:textSize="10dp"
                    android:layout_below="@+id/TImage1"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/air_conditioning"/>
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/table_frame_gray"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:src="@drawable/table_default_2"
                    android:id="@+id/TImage2"/>
                <TextView
                    android:id="@+id/TText2"
                    android:layout_marginTop="15dp"
                    android:textSize="10dp"
                    android:layout_below="@+id/TImage2"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refrigerator"/>
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/table_frame_gray"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:src="@drawable/table_default_3"
                    android:id="@+id/TImage3"/>
                <TextView
                    android:id="@+id/TText3"
                    android:layout_marginTop="15dp"
                    android:textSize="10dp"
                    android:layout_below="@+id/TImage3"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/washer"/>
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/table_frame_gray"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:src="@drawable/table_default_4"
                    android:id="@+id/TImage4"/>
                <TextView
                    android:id="@+id/TText4"
                    android:layout_marginTop="15dp"
                    android:textSize="10dp"
                    android:layout_below="@+id/TImage4"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/small_appliances"/>
            </RelativeLayout>

        </TableRow>
        <TableRow>
            <RelativeLayout
                android:background="@drawable/table_frame_gray"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:src="@drawable/table_default_5"
                    android:id="@+id/TImage5"/>
                <TextView
                    android:id="@+id/TText5"
                    android:layout_marginTop="15dp"
                    android:textSize="10dp"
                    android:layout_below="@+id/TImage5"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/big_appliances"/>
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/table_frame_gray"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:src="@drawable/table_default_6"
                    android:id="@+id/TImage6"/>
                <TextView
                    android:id="@+id/TText6"
                    android:layout_marginTop="15dp"
                    android:textSize="10dp"
                    android:layout_below="@+id/TImage6"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/life_appliances"/>
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/table_frame_gray"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:src="@drawable/table_default_7"
                    android:id="@+id/TImage7"/>
                <TextView
                    android:id="@+id/TText7"
                    android:layout_marginTop="15dp"
                    android:textSize="10dp"
                    android:layout_below="@+id/TImage7"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calorifier"/>
            </RelativeLayout>
            <RelativeLayout
                android:background="@drawable/table_frame_gray"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_centerInParent="true"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:src="@drawable/table_default_8"
                    android:id="@+id/TImage8"/>
                <TextView
                    android:id="@+id/TText8"
                    android:layout_marginTop="15dp"
                    android:textSize="10dp"
                    android:layout_below="@+id/TImage8"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tools"/>
            </RelativeLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>