<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.santa.courseexercise.MainActivity">


    <FrameLayout
        android:id="@+id/cont"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"></FrameLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <RelativeLayout
                    android:id="@+id/Tab1"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/TabHostImg1"
                        android:layout_width="50px"
                        android:layout_height="50px"
                        android:layout_centerInParent="true"
                        android:src="@drawable/house" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/TabHostImg1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/home"
                        android:textSize="10dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/Tab2"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/TabHostImg2"
                        android:layout_width="50px"
                        android:layout_height="50px"
                        android:layout_centerInParent="true"
                        android:src="@drawable/cart" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/TabHostImg2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/shopping_line"
                        android:textSize="10dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/Tab3"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/TabHostImg3"
                        android:layout_width="50px"
                        android:layout_height="50px"
                        android:layout_centerInParent="true"
                        android:src="@drawable/flaticonmaker" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/TabHostImg3"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:text="@string/me"
                        android:textSize="10dp" />
                </RelativeLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>


</LinearLayout>
