<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tabBackgroundColor"
    android:orientation="vertical"
    tools:context="com.santa.courseexercise.shopping.PayActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="我的订单"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="收货地址" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <TableRow android:background="@drawable/table_frame_gray">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/Orders_good_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/table_default_1" />

                <TextView
                    android:id="@+id/Orders_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/Orders_good_img"
                    android:text="@string/product_name" />

                <TextView
                    android:id="@+id/Orders_product_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Orders_product_name"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/Orders_good_img"
                    android:text="@string/product_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/product_price"
                    android:textColor="@color/colorPrice" />
            </RelativeLayout>
        </TableRow>

        <TableRow android:background="@drawable/table_frame_gray">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="发票信息" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="个人/明细 >"
                    android:textColor="@color/colorGery" />
            </RelativeLayout>

        </TableRow>

        <TableRow android:background="@drawable/table_frame_gray">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="优惠券" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="无可用优惠券"
                    android:textColor="@color/colorGery" />
            </RelativeLayout>

        </TableRow>

        <TableRow android:background="@drawable/table_frame_gray">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="有优惠券码？" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="去兑换 >" />
            </RelativeLayout>

        </TableRow>

        <TableRow android:background="@drawable/table_frame_gray">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="礼品卡" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="无可用礼品卡 >"
                    android:textColor="@color/colorGery" />
            </RelativeLayout>

        </TableRow>

        <TableRow android:background="@drawable/table_frame_gray">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="买家留言" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/comment"
                    android:text="请勿填写和发票、支付相关信息"
                    android:textColor="@color/colorGery"
                    android:textSize="10dp" />
            </RelativeLayout>

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@color/white">

        <TableRow android:background="@drawable/table_frame_gray">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="80dp"
                    android:text="共1件，合计：" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/product_price"
                    android:textColor="@color/colorPrice" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80px"
        android:text="微信支付"
        android:textColor="@color/white"
        android:background="@drawable/shape"
        android:id="@+id/Pay_btn"/>

</LinearLayout>
